# hyadmin

./: .gitignore  BRANCH_DELETION_README.md  CLEANUP_NOTES.md  Cargo.toml  DEPENDENCIES.md  FORCE_PUSH_REQUIRED.md  GIT_HISTORY_CLEANUP_SUMMARY.md  README_GIT_CLONE_ISSUE.md  UNUSED_BRANCHES.md  delete-unused-branches.sh  engine.py  io_interface.py  licmgr.py
.cargo/: config
admin/: Cargo.toml  README.md  build.sh  config.env.example  dev.sh  test_server  test_server.rs
admin/data/: admin.db
admin/frontend/: .eslintrc.js  package-lock.json  package.json  setupProxy.js
admin/frontend/public/: index.html
admin/frontend/src/: App.tsx  index.css
admin/frontend/src/components/: LanguageSwitcher.tsx  Layout.tsx
admin/frontend/src/config/: api.ts
admin/frontend/src/i18n/: index.ts
admin/frontend/src/i18n/locales/: en.json  ja.json  ko.json  zh.json
admin/frontend/src/pages/: APIs.tsx  Dashboard.tsx  Login.tsx  Models.tsx  Monitoring.tsx
admin/frontend/src/types/: index.ts
admin/src/: config.rs  lib.rs  main.rs  models.rs  routes.rs  services.rs
admin/src/handlers/: apis.rs  auth.rs  dashboard.rs  engine.rs  mod.rs  models.rs  monitoring.rs
admin/static/: app.js  style.css
backend/: Cargo.toml
backend/src/: admin.rs  gateway.rs  main.rs
backend/static/: status.html
data/: admin.db
engine/: CMakeLists.txt  pyproject.toml
engine/bench/: bench_moe.py  test_moe.py
engine/csrc/: CMakeLists.txt  python_bindings.cpp
engine/csrc/cpu_backend/: backend.cpp  backend.h  cpuinfer.h  task_queue.cpp  task_queue.h
engine/csrc/operators/fp8/: CMakeLists.txt  gemv.cu  ops.h
engine/csrc/operators/moe/: CMakeLists.txt  moe.cpp  moe.h
engine/csrc/operators/moe/llama.cpp/: ggml.c  ggml.h
engine/csrc/operators/moe/llamafile/: iqk_mul_mat.cpp  iqk_mul_mat.h  sgemm.cpp  sgemm.h  tinyblas_cpu.h
engine/csrc/perfetto/: categories.cc  categories.h
engine/heyi/: __init__.py  config.py  engine.py  io_interface.py
engine/heyi/models/deepseek_v3/: __init__.py
engine/heyi/models/qwen3_moe/: __init__.py  configuration_qwen3_moe.py
engine/heyi/operators/: __init__.py  base.py  cpuinfer.py  experts.py  fp8gemm.py  kdeepseekv2_model.py  linear.py  mla.py  rmsnorm.py  triton_attention.py
engine/heyi/optimized_models/: opt_modeling_deepseek_v3.py
engine/heyi/optimized_models/layerwise_prefill_models/: __init__.py  common.py  layerwise_prefill_modeling_deepseek_v3.py  layerwise_prefill_modeling_qwen3_moe.py
engine/heyi/runner/: __init__.py  base_runner.py  decode_runner.py  mla_decode_runner.py
engine/heyi/server/: main.py
engine/heyi/server/api/: __init__.py
engine/heyi/server/api/anthropic/: entrypoints.py
engine/heyi/server/api/common/: schema.py
engine/heyi/server/api/lic/: entrypoints.py
engine/heyi/server/api/openai/chat/: schema.py  tool_call_utils.py
engine/heyi/server/api/openai/models/: entrypoints.py
engine/heyi/server/static/: index.html  status.html
engine/heyi/utils/: cache.py  log.py  main_model_registry.py  request.py  ring_buffer.py  stats.py  stream_loader.py  usage.py  utils.py  weight_loader.py
engine/heyi/utils/kvcache/: kvcache.py  pagetable.py  prefixtree.py
engine/scripts/: test_kimi_k2_tool_call.py
gateway/: Cargo.toml
gateway/src/: main.rs
models/deepseek_v2/: __init__.py
models/deepseek_v3/: modeling_deepseek.py
models/qwen3_moe/: modeling_qwen3_moe.py
operators/: RoPE.py  gate.py  gqa.py  layer.py
optimized_models/: opt_modeling_qwen3_moe.py
optimized_models/layerwise_prefill_models/: layerwise_prefill_modeling_deepseek_v3.py
runner/: gqa_decode_runner.py  prefill_runner.py
server/api/: __init__.py
server/api/anthropic/: __init__.py  schema.py
server/api/lic/: __init__.py
server/api/openai/: __init__.py
server/api/openai/chat/: entrypoints.py
server/api/openai/models/: schema.py
server/api/status/: __init__.py  entrypoints.py  schema.py
utils/: fork_model.py  log.py  singleton.py  stream_loader.py
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  index.css
web/src/lib/: api.js
